--- a/index.html
+++ b/index.html
@@ -322,11 +322,11 @@
             <h2>Recognition</h2>
 
             <div class="recognition-card">
-                <img src="images/recognition.png">
+                <img src="27877.jpg">
 
                 <div class="recognition-content">
                     <a href="https://example.com" target="_blank">
-                        Featured in International Robotics Competition Highlights
+                        Competition achievements featured in local newspaper coverage.
                     </a>
                 </div>
             </div>
