--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     .paper-image {
         width: 100%;
-        height: 180px;
+        height: 150px; /* reduced */
         background: #0b1220;
         display: flex;
         align-items: center;
@@ -161,7 +161,7 @@
     }
 
     .paper-title {
-        font-size: 18px;
+        font-size: 17px; /* slightly smaller */
         color: #60a5fa;
         font-weight: bold;
         margin-bottom: 10px;
@@ -180,7 +180,7 @@
     }
 
     .paper-desc {
-        font-size: 14px;
+        font-size: 13.5px; /* slightly smaller */
         color: #cbd5e1;
         line-height: 1.5;
     }
@@ -189,7 +189,7 @@
 
     .dual-section {
         display: grid;
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 1.6fr 1fr; /* balanced */
         gap: 40px;
         align-items: start;
     }
@@ -206,6 +206,7 @@
         overflow: hidden;
         transition: 0.3s ease;
         text-align: center;
+        padding-bottom: 10px;
     }
 
     .recognition-card:hover {
@@ -215,7 +216,7 @@
 
     .recognition-card img {
         width: 100%;
-        height: 200px;
+        height: 240px; /* increased importance */
         object-fit: cover;
     }
 
@@ -296,8 +297,7 @@
 
                 <div class="paper-content">
                     <div class="paper-title">
-                        Vision Based Automation system for Onion
-                        Grading Using Robotic Arm
+                        Vision Based Automation system for Onion Grading Using Robotic Arm
                     </div>
 
                     <div class="paper-authors">
@@ -310,11 +310,8 @@
                     </div>
 
                     <div class="paper-desc">
-                         This paper presents the system development
-                         methodology, including hardware integration, algorithm devel
-                         opment and implementation. The experiments conducted on the
-                         system demonstrate the ability to detect and segregate onions
-                         effectively
+                         This paper presents the system development methodology, including hardware integration,
+                         algorithm development and implementation. The experiments demonstrate onion detection and segregation.
                     </div>
 
                     <a href="#" class="btn">Read Paper</a>
