--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
 
                 <div class="paper-content">
                     <div class="paper-title">
+                        <a href="https://ieeexplore.ieee.org/document/11362888" target="_blank">
                         Vision Based Automation system for Onion Grading Using Robotic Arm
                     </div>
 
@@ -314,7 +315,7 @@
                          algorithm development and implementation. The experiments demonstrate onion detection and segregation.
                     </div>
 
-                    <a href="#" class="btn">Read Paper</a>
+                    
                 </div>
             </div>
         </div>
