--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 body{background-color:#0f172a;color:#e2e8f0;line-height:1.6;}
 
-header{text-align:center;padding:60px 20px;background:linear-gradient(135deg,#1e293b,#0f172a);} 
+header{text-align:center;padding:60px 20px;background:linear-gradient(135deg,#1e293b,#0f172a);}
 header h1{font-size:40px;margin-bottom:10px;}
 header p{font-size:18px;color:#94a3b8;}
 
@@ -22,8 +22,9 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
 h2{font-size:28px;margin-bottom:30px;border-bottom:2px solid #38bdf8;display:inline-block;padding-bottom:5px;}
 
 .card-container{display:grid;grid-template-columns:repeat(3,1fr);gap:25px;}
-@media(max-width:900px){.card-container{grid-template-columns:repeat(2,1fr);}}
-@media(max-width:600px){.card-container{grid-template-columns:1fr;}}
+
+@media (max-width:900px){.card-container{grid-template-columns:repeat(2,1fr);}}
+@media (max-width:600px){.card-container{grid-template-columns:1fr;}}
 
 .card{background:#1e293b;padding:25px;border-radius:10px;transition:.3s ease;}
 .card:hover{transform:translateY(-5px);background:#243447;}
@@ -35,7 +36,7 @@ footer{text-align:center;padding:30px;background-color:#1e293b;margin-top:40px;c
 .btn{display:inline-block;margin-top:15px;padding:8px 15px;background-color:#38bdf8;color:#0f172a;text-decoration:none;border-radius:5px;font-weight:bold;font-size:14px;}
 .btn:hover{background-color:#0ea5e9;}
 
-/* paper */
+/* ===== Research Paper Card ===== */
 
 .paper-card{background:#1e293b;border-radius:14px;overflow:hidden;transition:.3s ease;display:flex;flex-direction:column;}
 .paper-card:hover{transform:translateY(-5px);background:#243447;}
@@ -49,10 +50,10 @@ footer{text-align:center;padding:30px;background-color:#1e293b;margin-top:40px;c
 .paper-conf{font-size:13px;color:#94a3b8;margin-bottom:12px;}
 .paper-desc{font-size:13.5px;color:#cbd5e1;line-height:1.5;}
 
-/* research + recognition */
+/* ===== Research + Recognition Layout ===== */
 
 .dual-section{display:grid;grid-template-columns:1.6fr 1fr;gap:40px;align-items:start;}
-@media(max-width:900px){.dual-section{grid-template-columns:1fr;}}
+@media (max-width:900px){.dual-section{grid-template-columns:1fr;}}
 
 .recognition-card{background:#1e293b;border-radius:14px;overflow:hidden;transition:.3s ease;text-align:center;padding-bottom:10px;}
 .recognition-card:hover{transform:translateY(-5px);background:#243447;}
@@ -61,8 +62,8 @@ footer{text-align:center;padding:30px;background-color:#1e293b;margin-top:40px;c
 .recognition-content{padding:18px;}
 .recognition-content a{color:#38bdf8;font-weight:bold;text-decoration:none;}
 .recognition-content a:hover{text-decoration:underline;}
-</style>
 
+</style>
 </head>
 
 <body>
@@ -70,6 +71,7 @@ footer{text-align:center;padding:30px;background-color:#1e293b;margin-top:40px;c
 <header>
 <h1>Eric Fernandes</h1>
 <p>Robotics | Computer Vision | Industrial Automation</p>
+
 <nav>
 <a href="#about">About</a>
 <a href="projects.html">Projects</a>
@@ -81,34 +83,54 @@ footer{text-align:center;padding:30px;background-color:#1e293b;margin-top:40px;c
 
 <section id="about">
 <h2>About Me</h2>
-<p>I am a Robotics and AI enthusiast focused on 6D pose estimation, robot manipulation, and industrial automation systems. I enjoy building perception-driven robotic systems using ROS2, OpenCV, and deep learning.</p>
+<p>
+I am a Robotics and AI enthusiast focused on 6D pose estimation, robot manipulation,
+and industrial automation systems. I enjoy building perception-driven robotic systems
+using ROS2, OpenCV, and deep learning.
+</p>
 </section>
 
 <section id="projects">
 <h2>Projects</h2>
+
 <div class="card-container">
 
 <div class="card">
 <h3>6D Pose Estimation System</h3>
-<p>Enable real-time 6D object pose estimation for variable orientations and integrate it with an ABB manipulator for adaptive pick-and-place without fixed waypoint programming.</p>
+<p>
+Enable real-time 6D object pose estimation for variable orientations
+and integrate it with an ABB manipulator for adaptive pick-and-place
+without fixed waypoint programming.
+</p>
 <a href="projects.html" class="btn">View Projects</a>
 </div>
 
 <div class="card">
 <h3>Intelligent Vision-Guided Sorting Using Dobot MG400</h3>
-<p>Enable automated classification and sorting of objects based on material type and shape using a robotic manipulator instead of manual sorting.</p>
+<p>
+Enable automated classification and sorting of objects based on
+material type and shape using a robotic manipulator instead of
+manual sorting.
+</p>
 <a href="projects.html#dobot" class="btn">View Project</a>
 </div>
 
 <div class="card">
 <h3>Multi-Modal Human–Robot Interaction Platform</h3>
-<p>Enable a humanoid robot to understand spoken commands and perform interactive behaviors through natural language communication.</p>
+<p>
+Enable a humanoid robot to understand spoken commands and perform
+interactive behaviors through natural language communication.
+</p>
 <a href="projects.html#yanshee" class="btn">View Project</a>
 </div>
 
 <div class="card">
 <h3>Augmented Reality Model-Target Android Application</h3>
-<p>Develop a mobile AR application capable of recognizing physical objects using model targets and dynamically displaying contextual information to the end user in real time.</p>
+<p>
+Develop a mobile AR application capable of recognizing physical
+objects using model targets and dynamically displaying contextual
+information to the end user in real time.
+</p>
 <a href="projects.html#AR" class="btn">View Project</a>
 </div>
 
@@ -117,17 +139,26 @@ footer{text-align:center;padding:30px;background-color:#1e293b;margin-top:40px;c
 
 <section id="competitions">
 <h2>Competitions</h2>
+
 <div class="card-container">
 
 <div class="card">
 <h3>Robocup ARM 2023</h3>
-<p>Complete a four-level autonomous manipulation task where increasing difficulty required vision-guided classification of objects by color and shape, followed by accurate placement into corresponding bins.</p>
+<p>
+Complete a four-level autonomous manipulation task where increasing
+difficulty required vision-guided classification of objects by color
+and shape, followed by accurate placement into corresponding bins.
+</p>
 <a href="competitions.html#robocup" class="btn">View Project</a>
 </div>
 
 <div class="card">
 <h3>RGMC, ICRA 2025 - Atlanta, USA</h3>
-<p>Design and implement a fully autonomous robotic manipulation system capable of accurately detecting, localizing, and grasping YCB objects in a competitive environment.</p>
+<p>
+Design and implement a fully autonomous robotic manipulation system
+capable of accurately detecting, localizing, and grasping YCB objects
+in a competitive environment.
+</p>
 <a href="competitions.html#icra" class="btn">View Project</a>
 </div>
 
@@ -138,6 +169,7 @@ footer{text-align:center;padding:30px;background-color:#1e293b;margin-top:40px;c
 
 <div class="dual-section">
 
+<!-- LEFT: PAPER -->
 <div>
 <h2>Research Papers</h2>
 
@@ -155,7 +187,8 @@ Vision Based Automation system for Onion Grading Using Robotic Arm
 </div>
 
 <div class="paper-authors">
-Rahul Suryawanshi, Jayesh Jagtap, Dnyaneshwari Shegokar, Siddhesh Jaju, Chandan M.N, Avinash M. Badadhe, Pranav Lad, Eric Fernandes
+Rahul Suryawanshi, Jayesh Jagtap, Dnyaneshwari Shegokar, Siddhesh Jaju,
+Chandan M.N, Avinash M. Badadhe, Pranav Lad, Eric Fernandes
 </div>
 
 <div class="paper-conf">
@@ -163,13 +196,18 @@ IEEE 4th International Conference for Advancement in Technology (ICONAT), 2025
 </div>
 
 <div class="paper-desc">
-This paper presents the system development methodology, including hardware integration, algorithm development and implementation. The experiments demonstrate onion detection and segregation.
+This paper presents the system development methodology including hardware integration,
+algorithm development and implementation. Experiments demonstrate onion detection
+and segregation performance.
 </div>
+
+<a href="https://ieeexplore.ieee.org/document/11362888" target="_blank" class="btn">Read Paper</a>
 
 </div>
 </div>
 </div>
 
+<!-- RIGHT: RECOGNITION -->
 <div>
 <h2>Recognition</h2>
 
