--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
                 <div class="paper-card">
                     <div class="paper-image">
-                        <img src="images/jamming_gripper.png" alt="Research Paper">
+                        <img src="Screenshot (699).png" alt="Research Paper">
                     </div>
 
                     <div class="paper-content">
