--- a/index.html
+++ b/index.html
@@ -316,8 +316,9 @@
             <div class="card">
                 <h3>Robocup ARM 2023</h3>
                 <p>
-                    Four-level autonomous manipulation task requiring vision-guided
-                    classification and accurate bin placement.
+                    Complete a four-level autonomous manipulation task where increasing
+                    difficulty required vision-guided classification of objects by color
+                    and shape, followed by accurate placement into corresponding bins..
                 </p>
                 <a href="competitions.html#robocup" class="btn">View Project</a>
             </div>
