--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
 
         .dual-section {
             display: grid;
-            grid-template-columns: 60% 40%;
-            gap: 30px;
+            grid-template-columns: 1.6fr 1fr;
+            gap: 40px;
             align-items: start;
         }
 
