--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             display: grid;
             grid-template-columns: 1fr 1.3fr;
             gap: 40px;
-            align-items: start;
+            align-items: stetch;
         }
 
         @media (max-width: 900px) {
